# tavo

./: .gitignore  Manifest.in  README.md  fix_tavo_windows.ps1  pyproject.toml  requirements.txt  setup.py  tree.txt
.github/workflows/: release.yml
bino_cli/: main.py
bino_cli/commands/: __init__.py  build.py  create.py  dev.py  install.py  start.py
bino_cli/utils/: __init__.py  npm.py  pip.py
bino_core/: bundler.py  ssr.py
bino_core/hmr/: watcher.py  websocket.py
bino_core/orm/: fields.py  migrations.py  models.py  query.py
bino_core/router/: __init__.py  api_router.py  app_router.py
docs/: deployment.md  getting-started.md  hmr.md
examples/blog/: README.md
instructions/bino_cli/: __init__.py.txt  main.py.txt
instructions/bino_cli/commands/: build.py.txt  create.py.txt  dev.py.txt  install.py.txt  start.py.txt
instructions/bino_cli/utils/: fs.py.txt  npm.py.txt  pip.py.txt
instructions/bino_core/: __init__.py.txt  bundler.py.txt  ssr.py.txt
instructions/bino_core/hmr/: watcher.py.txt  websocket.py.txt
instructions/bino_core/orm/: __init__.py.txt  fields.py.txt  migrations.py.txt  models.py.txt  query.py.txt
instructions/bino_core/router/: api_router.py.txt  app_router.py.txt
instructions/docs/: deployment.md.txt  getting-started.md.txt  hmr.md.txt
instructions/examples/blog/: README.md.txt
instructions/rust_bundler/: Cargo.toml.txt
instructions/rust_bundler/src/: main.rs.txt  swc_bridge.rs.txt
instructions/templates/api/: __init__.py.txt
instructions/templates/api/models/: user.py.txt
instructions/templates/api/routes/: hello.py.txt
instructions/templates/app/: layout.tsx.txt  page.tsx.txt
instructions/templates/app/components/: Hello.tsx.txt
migrations/: 20250830_094744_add_user_profile_table.sql  20250830_094744_create_users_table.sql
new_app/: .gitignore  .swcrc  package.json  tsconfig.json
new_app/api/: __init__.py
new_app/api/models/: user.py
new_app/api/routes/: hello.py
new_app/app/: layout.tsx  page.tsx
new_app/app/about/: page.tsx
new_app/app/components/: Hello.tsx
rust_bundler/: Cargo.toml
rust_bundler/src/: compiler.rs  config.rs  error.rs  main.rs  manifest.rs  swc_bridge.rs  watcher.rs
src/rust_bundler/src/: config.rs  main.rs
tavo/: __init__.py  compile.js
tavo/cli/: __init__.py  main.py
tavo/cli/commands/: __init__.py  build.py  create.py  dev.py  install.py  start.py
tavo/cli/utils/: __init__.py  fs.py  npm.py  pip.py
tavo/core/: __init__.py  bundler.py  middleware.py  routing.py  ssr.py
tavo/core/bundler/: __init__.py  cache.py  compiler.py  constants.py  deduplicator.py  devserver.py  installer.py  layouts.py  pyproject.toml  resolver.py  router.py  templates.py  utils.py
tavo/core/bundler/docs/: api.md  bundler.md  routing.md
tavo/core/bundler/examples/: run_dev_example.py
tavo/core/bundler/examples/sample_app/: layout.tsx  page.tsx
tavo/core/bundler/examples/sample_app/about/: page.tsx
tavo/core/bundler/examples/sample_app/dashboard/: layout.tsx  page.tsx
tavo/core/bundler/examples/sample_app/dashboard/settings/: page.tsx
tavo/core/bundler/tests/: test_compiler_cache.py  test_integration_compile.py  test_resolver.py
tavo/core/hmr/: __init__.py  watcher.py  websocket.py
tavo/core/orm/: __init__.py  fields.py  migrations.py  models.py  query.py
tavo/core/router/: __init__.py  api_router.py  app_router.py
tavo/core/utils/: bundler.py
tavo/rust_bundler/: .gitignore  Cargo.toml  Makefile  README.md
tavo/rust_bundler/examples/: App.tsx  package.json
tavo/rust_bundler/examples/components/: Counter.tsx  Header.tsx
tavo/rust_bundler/runtime/: react-dom-server.js  react.js
tavo/rust_bundler/src/: build.rs  bundler.rs  cli.rs  compiler.rs  error.rs  fs_router.rs  hydration.rs  layout.rs  main.rs  output.rs  renderer.rs  ssr.rs  swc_bridge.rs  swc_build.rs  utils.rs
tavo/templates/api/models/: user.py
tavo/templates/app/components/: Hello.tsx
tavo/templates/default/: main copy.py  main.py  package copy.json  package.json
tavo/templates/default/api/routes/: hello.py
tavo/templates/default/api/routes/v1/: users.py
tavo/templates/default/app/: page.tsx
tavo/templates/default/app/components/: Hello.tsx
tavo_cli/commands/: build.py  create.py  dev.py  install.py
tavo_cli/utils/: fs.py
tavo_core/: __init__.py
tavo_core/hmr/: __init__.py
tavo_core/orm/: __init__.py  fields.py  models.py
templates/api/models/: user.py
templates/app/: layout.tsx  page.tsx
templates/default/api/: __init__.py
templates/default/api/routes/: hello.py
