[package]
name = "ssr-bundler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssr-bundler"
path = "src/main.rs"

[dependencies]
swc_core = { version = "38.0.0", features = [
    "ecma_ast",
    "ecma_parser", 
    "ecma_transforms",
    "ecma_transforms_react",
    "ecma_transforms_typescript",
    "ecma_codegen",
    "common",
    "ecma_visit"
] }
thiserror = "2.0"
swc_common = "14.0.3"

# Other dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.3"
regex = "1.5"