[package]
name = "ssr-bundler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssr-bundler"
path = "src/main.rs"

[dependencies]

# SWC compiler stack
swc_core = { version = "38.0.0", features = [
    "ecma_ast",
    "ecma_parser", 
    "ecma_transforms",
    "ecma_transforms_react",
    "ecma_transforms_typescript",
    "ecma_codegen",
    "common",
    "ecma_visit"
] }
swc_common = "14.0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async + CLI
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
walkdir = "2.3"
regex = "1.5"

# JavaScript runtime for SSR
rquickjs = { version = "0.8", features = ["full"] }